--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,14 +37,13 @@ publish_generic:
     - job: build_and_package
       artifacts: false
   script:
-    # 1) Upload to Generic Package Registry
-    - >
-      curl.exe --silent 
-        --header "JOB-TOKEN: $CI_JOB_TOKEN"
-        --upload-file "$PERSIST_DIR\mysetup.exe"
-        "$CI_API_V4_URL/projects/$CI_PROJECT_ID/packages/generic/nightly/$CI_PIPELINE_IID/mysetup.exe"
-    # 2) Print the stable download URL
-    - 'echo "Download URL:"'
-    - 'echo "$CI_API_V4_URL/projects/$CI_PROJECT_ID/packages/generic/nightly/$CI_PIPELINE_IID/mysetup.exe"'
-
+    # Upload the installer to the Generic Package Registry
+    - >-
+      & curl.exe --silent
+        --header "JOB-TOKEN: $env:CI_JOB_TOKEN"
+        --upload-file "$env:PERSIST_DIR\mysetup.exe"
+        "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/packages/generic/nightly/$env:CI_PIPELINE_IID/mysetup.exe"
+    # Print out the download URL
+    - >-
+      Write-Host "Download URL: $env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/packages/generic/nightly/$env:CI_PIPELINE_IID/mysetup.exe"
   when: on_success
