--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,35 +11,35 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Setup Miniconda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        auto-update-conda: true
-        python-version: 3.9          # can match your amigo.yml
-        environment-file: amigo.yml
-        activate-environment: amigo
+      - name: Setup Miniconda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: 3.9
+          environment-file: amigo.yml
+          activate-environment: amigo
 
-    - name: Ensure PyInstaller is installed
-      run: |
-        pip install pyinstaller
+      - name: Ensure PyInstaller is installed
+        run: |
+          pip install pyinstaller
 
-    - name: Build executable with PyInstaller
-      run: |
-        pyinstaller Launch_ImGUI.spec
+      - name: Build executable with PyInstaller
+        run: |
+          pyinstaller Launch_ImGUI.spec
 
-    - name: Install Inno Setup
-      run: |
-        choco install innosetup -y
+      - name: Install Inno Setup
+        run: |
+          choco install innosetup -y
 
-    - name: Build Windows installer
-      run: |
-        "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" compile.iss
+      - name: Build Windows installer
+        run: |
+          "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" compile.iss
 
-    - name: Upload installer artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: AMIGOpy-installer
-        path: Output/mysetup.exe
+      - name: Upload installer artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: AMIGOpy-installer
+          path: Output/mysetup.exe
