--- a/amigo.yml
+++ b/amigo.yml
@@ -26,8 +26,8 @@ dependencies:
   - brotli-bin=1.0.9=h8ffe710_7
   - brotli-python=1.0.9=py311hd77b12b_7
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2025.4.26=h4c7d964_0
-  - certifi=2025.4.26=pyhd8ed1ab_0
+  - ca-certificates=2025.7.9=h4c7d964_0
+  - certifi=2025.7.9=pyhd8ed1ab_0
   - cffi=1.16.0=py311h2bbff1b_0
   - cfitsio=3.470=h0af3d06_7
   - chardet=4.0.0=py311haa95532_1003
@@ -113,6 +113,7 @@ dependencies:
   - libxml2=2.10.4=h0ad7f3c_1
   - libxslt=1.1.37=h2bbff1b_1
   - libzopfli=1.0.3=h0e60522_0
+  - lxml=5.2.1=py311h09808a7_0
   - lz4=4.3.2=py311h2bbff1b_0
   - lz4-c=1.9.4=h2bbff1b_0
   - markdown-it-py=2.2.0=py311haa95532_1
@@ -238,6 +239,7 @@ dependencies:
   - tomlkit=0.11.1=py311haa95532_0
   - tornado=6.3.3=py311h2bbff1b_0
   - traitlets=5.7.1=py311haa95532_0
+  - trimesh=4.7.0=pyh7b2049a_0
   - tzdata=2023d=h04d1e81_0
   - ujson=5.4.0=py311hd77b12b_0
   - unidecode=1.2.0=pyhd3eb1b0_0
