--- a/amigo.yml
+++ b/amigo.yml
@@ -152,6 +152,7 @@ dependencies:
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=10.0.1=py311h045eedc_0
+  - pip=25.1.1=pyh8b19718_0
   - platformdirs=3.10.0=py311haa95532_0
   - pluggy=1.0.0=py311haa95532_1
   - ply=3.11=py311haa95532_0
@@ -266,14 +267,15 @@ dependencies:
       - bm4d==4.2.3
       - contourpy==1.1.1
       - cycler==0.11.0
+      - et-xmlfile==2.0.0
       - fonttools==4.42.1
       - kiwisolver==1.4.5
       - matplotlib==3.8.0
       - mplcursors==0.5.3
-      - pip==25.1.1
+      - openpyxl==3.1.5
       - pyparsing==3.1.1
       - python-gdcm==3.0.24.1
       - simpleitk==2.5.2
       - typing-extensions==4.14.0
       - vtk==9.2.6
-prefix: C:\Users\gabriel.paivafonseca\AppData\Local\anaconda3\envs\amigo
+prefix: C:\Users\teun.vanwagenberg\AppData\Local\anaconda3\envs\amigo
