--- a/.github/workflows/auto_cont.yml
+++ b/.github/workflows/auto_cont.yml
@@ -58,25 +58,27 @@ jobs:
       - name: Build Windows installer (AMIGOpy)
         run: '& "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" compile.iss'
 
-      # === 4) Package BOTH outputs into a single zip for signing ===
-      # - AMIGOpy installer: Output\mysetup.exe (as produced by your .iss)
-      # - Segmentator API exe: dist\segmentator_api.exe
-      - name: Create unsigned bundle (zip for signature)
+      # === 4) Package BOTH outputs (no manual zip) ===
+      # Put the EXEs in a plain folder; upload-artifact will zip it once.
+      - name: Stage unsigned bundle (folder, not zip)
         shell: powershell
         run: |
-          if (!(Test-Path -LiteralPath "unsigned")) { New-Item -ItemType Directory -Path "unsigned" | Out-Null }
+          if (Test-Path -LiteralPath "unsigned") { Remove-Item -Recurse -Force "unsigned" }
+          New-Item -ItemType Directory -Path "unsigned" | Out-Null
           if (!(Test-Path -LiteralPath "Output\mysetup.exe")) { throw "AMIGOpy installer not found at Output\mysetup.exe" }
           if (!(Test-Path -LiteralPath "dist\segmentator_api.exe")) { throw "Segmentator API exe not found at dist\segmentator_api.exe" }
-          Compress-Archive -Force -Path "Output\mysetup.exe","dist\segmentator_api.exe" -DestinationPath "unsigned\unsigned_for_signing.zip"
+          Copy-Item "Output\mysetup.exe" "unsigned\mysetup.exe"
+          Copy-Item "dist\segmentator_api.exe" "unsigned\segmentator_api.exe"
 
-      - name: Upload unsigned bundle artifact
-        id: upload_unsigned_zip
+      - name: Upload unsigned bundle artifact (folder)
+        id: upload_unsigned_bundle
         uses: actions/upload-artifact@v4
         with:
           name: unsigned-bundle
-          path: unsigned/unsigned_for_signing.zip
+          path: unsigned/
+          if-no-files-found: error
 
-      # === 5) Sign the zip (SignPath will sign supported binaries inside the artifact) ===
+      # === 5) Sign with SignPath (it will sign both EXEs inside the artifact) ===
       - name: Submit bundle to SignPath
         uses: signpath/github-action-submit-signing-request@v1.1
         with:
@@ -84,11 +86,11 @@ jobs:
           organization-id: ${{ secrets.SIGNPATH_ORGANIZATION_ID }}
           project-slug: ${{ secrets.SIGNPATH_PROJECT_SLUG }}
           signing-policy-slug: ${{ secrets.SIGNPATH_SIGNING_POLICY_SLUG }}
-          github-artifact-id: ${{ steps.upload_unsigned_zip.outputs.artifact-id }}
+          github-artifact-id: ${{ steps.upload_unsigned_bundle.outputs.artifact-id }}
           wait-for-completion: true
           output-artifact-directory: signed
 
-      # === 6) Upload the signed result (zip containing the signed files) ===
+      # === 6) Upload the signed result (SignPath returns a zip with the signed files at root) ===
       - name: Upload signed bundle
         uses: actions/upload-artifact@v4
         with:
