--- a/.github/workflows/auto_cont.yml
+++ b/.github/workflows/auto_cont.yml
@@ -28,31 +28,22 @@ jobs:
       # ---- Minimal deps for AMIGOpy GUI ----
       - name: Install build dependency (PyInstaller for GUI)
         shell: powershell
-        run: pyinstaller Launch_ImGUI.spec --clean --distpath dist_gui --workpath build_gui
+        run: pip install pyinstaller
 
-      # ---- Build AMIGOpy GUI from your existing spec ----
       - name: PyInstaller (AMIGOpy GUI)
         shell: powershell
         run: pyinstaller Launch_ImGUI.spec --clean
 
-      # ---- Now install heavy deps for the Segmentator API only ----
+      # ---- Heavy deps only for the API ----
       - name: Install build dependencies (API + TS stack)
         shell: powershell
         run: |
-          # Web stack for API
           pip install fastapi uvicorn[standard] starlette pydantic python-multipart
-          # Imaging + scientific stack used by API
           pip install SimpleITK nibabel scikit-image scipy tqdm einops packaging
-          # MONAI / nnUNet / TotalSegmentator
           pip install monai==1.* nnunetv2
-          # CPU-only PyTorch wheels
           pip install --index-url https://download.pytorch.org/whl/cpu torch torchvision
-          # TotalSegmentator itself (pulls extras)
           pip install totalsegmentator
-          # (PyInstaller already installed above)
 
-      # ---- Build Segmentator API (bundled) from .spec ----
-      # Make sure segmentator_api.spec is in the repo root
       - name: PyInstaller (Segmentator API, OneDir)
         shell: powershell
         run: pyinstaller segmentator_api.spec --clean
@@ -62,23 +53,22 @@ jobs:
         shell: powershell
         run: choco install innosetup -y
 
-      # AMIGOpy installer (your existing script)
       - name: Build Windows installer (AMIGOpy)
         shell: powershell
         run: '& "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" compile.iss'
 
-      # Segmentator API installer (SegmentatorAPI.iss)
       - name: Build Windows installer (Segmentator API)
         shell: powershell
         run: '& "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" SegmentatorAPI.iss'
 
-      # ---- Upload artifacts ----
+      # ---- Upload exactly one file per artifact (so one file per zip) ----
       - name: Upload AMIGOpy installer (unsigned)
         uses: actions/upload-artifact@v4
         with:
           name: AMIGOpy-Installer-unsigned
-          path: Output/*.exe
+          path: Output/mysetup.exe
           if-no-files-found: error
+          overwrite: true
 
       - name: Upload Segmentator API installer (unsigned)
         uses: actions/upload-artifact@v4
@@ -86,4 +76,4 @@ jobs:
           name: SegmentatorAPI-Installer-unsigned
           path: Output/SegmentatorAPI-Setup.exe
           if-no-files-found: error
-
+          overwrite: true
